adding exercise solutions

--- a/jupyter-notebooks/Chapter 1 Introduction to Vectorization.ipynb
+++ b/jupyter-notebooks/Chapter 1 Introduction to Vectorization.ipynb
@@ -129,6 +129,190 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a2c5c6c4",
+   "metadata": {},
+   "source": [
+    "# Memory Allocation of Vectorized Operations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "bc84fdb9",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-17T04:30:10.855438Z",
+     "start_time": "2023-12-17T04:30:10.783423Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# !pip install memory_profiler==0.61.0\n",
+    "%load_ext memory_profiler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "949f300c",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-17T04:28:47.546655Z",
+     "start_time": "2023-12-17T04:28:47.538917Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting memory_allocation_example.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file memory_allocation_example.py\n",
+    "\n",
+    "import numpy as np\n",
+    "\n",
+    "def sum_of_square_vectorized(X):\n",
+    "    x = np.asarray(X)\n",
+    "    x_sq = np.square(x) # x ** 2\n",
+    "    res = x_sq.sum()\n",
+    "    return res\n",
+    "\n",
+    "\n",
+    "def sum_of_square_for_loop(X):\n",
+    "    res = 0\n",
+    "    for x in X:\n",
+    "        res += x ** 2\n",
+    "    return res\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "ec50c51c",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-17T04:07:00.111121Z",
+     "start_time": "2023-12-17T04:07:00.023851Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from memory_allocation_example import sum_of_square_vectorized\n",
+    "X = np.linspace(-50, 50, 1_000_000).tolist()\n",
+    "%mprun -f sum_of_square_vectorized sum_of_square_vectorized(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "26435784",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-17T04:27:24.660306Z",
+     "start_time": "2023-12-17T04:27:21.484752Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.91 ms ± 64.7 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%timeit sum_of_square_vectorized(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "5a113d24",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-17T04:30:24.504241Z",
+     "start_time": "2023-12-17T04:30:21.383599Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from memory_allocation_example import sum_of_square_for_loop\n",
+    "X = np.linspace(-50, 50, 100_000).tolist()\n",
+    "%mprun -f sum_of_square_for_loop sum_of_square_for_loop(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "76c59572",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-17T04:29:50.017739Z",
+     "start_time": "2023-12-17T04:29:45.361396Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.72 ms ± 39 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%timeit sum_of_square_for_loop(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "723054ea",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-17T04:40:22.275149Z",
+     "start_time": "2023-12-17T04:40:22.267712Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-31.64335664335664"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(3.91 - 5.72) / 5.72 * 100"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "dd3185a9",
    "metadata": {},
    "source": [
