--- a/jupyter-notebooks/Chapter 05 Masking and Padding.ipynb
+++ b/jupyter-notebooks/Chapter 05 Masking and Padding.ipynb
@@ -1439,8 +1439,8 @@
     "        )\n",
     "        scaled_logit_score += causal_mask * -1e9\n",
     "\n",
-    "    # weights: softmax on all the query/key pairs\n",
-    "    weights = softmax(scaled_logit_score, axis=(-1, -2))\n",
+    "    # weights: softmax normalization\n",
+    "    weights = softmax(scaled_logit_score, axis=-1)\n",
     "    # Add dropout\n",
     "    weights = tf.nn.dropout(weights, droprate)\n",
     "\n",
@@ -1448,38 +1448,6 @@
     "    attention = tf.matmul(weights, value)\n",
     "\n",
     "    return attention, weights"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "id": "87984dd9",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-10-01T21:35:14.650107Z",
-     "start_time": "2023-10-01T21:35:14.507841Z"
-    },
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "'<=' not supported between instances of 'int' and 'tuple'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[39], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mtf\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mnn\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msoftmax\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtf\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrandom\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43muniform\u001b[49m\u001b[43m(\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m15\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m50\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m50\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43maxis\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/opt/miniforge3/envs/lectures/lib/python3.10/site-packages/tensorflow/python/util/traceback_utils.py:153\u001b[0m, in \u001b[0;36mfilter_traceback.<locals>.error_handler\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    151\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[1;32m    152\u001b[0m   filtered_tb \u001b[38;5;241m=\u001b[39m _process_traceback_frames(e\u001b[38;5;241m.\u001b[39m__traceback__)\n\u001b[0;32m--> 153\u001b[0m   \u001b[38;5;28;01mraise\u001b[39;00m e\u001b[38;5;241m.\u001b[39mwith_traceback(filtered_tb) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[1;32m    154\u001b[0m \u001b[38;5;28;01mfinally\u001b[39;00m:\n\u001b[1;32m    155\u001b[0m   \u001b[38;5;28;01mdel\u001b[39;00m filtered_tb\n",
-      "File \u001b[0;32m~/opt/miniforge3/envs/lectures/lib/python3.10/site-packages/tensorflow/python/ops/nn_ops.py:3825\u001b[0m, in \u001b[0;36m_wrap_2d_function\u001b[0;34m(inputs, compute_op, dim, name)\u001b[0m\n\u001b[1;32m   3823\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(dim, ops\u001b[38;5;241m.\u001b[39mTensor):\n\u001b[1;32m   3824\u001b[0m   dim_val \u001b[38;5;241m=\u001b[39m tensor_util\u001b[38;5;241m.\u001b[39mconstant_value(dim)\n\u001b[0;32m-> 3825\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m dim_val \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;241m-\u001b[39mshape\u001b[38;5;241m.\u001b[39mndims \u001b[38;5;241m<\u001b[39m\u001b[38;5;241m=\u001b[39m dim_val \u001b[38;5;241m<\u001b[39m shape\u001b[38;5;241m.\u001b[39mndims:\n\u001b[1;32m   3826\u001b[0m   \u001b[38;5;28;01mraise\u001b[39;00m errors_impl\u001b[38;5;241m.\u001b[39mInvalidArgumentError(\n\u001b[1;32m   3827\u001b[0m       \u001b[38;5;28;01mNone\u001b[39;00m, \u001b[38;5;28;01mNone\u001b[39;00m,\n\u001b[1;32m   3828\u001b[0m       \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m`dim` must be in the range [\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;241m-\u001b[39mshape\u001b[38;5;241m.\u001b[39mndims\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m, \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mshape\u001b[38;5;241m.\u001b[39mndims\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m) where \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m   3829\u001b[0m       \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mshape\u001b[38;5;241m.\u001b[39mndims\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m is the number of dimensions in the input. \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m   3830\u001b[0m       \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mReceived: dim=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mdim_val\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m   3832\u001b[0m \u001b[38;5;66;03m# If dim is not the last dimension, we have to do a transpose so that we can\u001b[39;00m\n\u001b[1;32m   3833\u001b[0m \u001b[38;5;66;03m# still perform the op on its last dimension.\u001b[39;00m\n\u001b[1;32m   3834\u001b[0m \n\u001b[1;32m   3835\u001b[0m \u001b[38;5;66;03m# In case dim is negative (and is not last dimension -1), add shape.ndims\u001b[39;00m\n",
-      "\u001b[0;31mTypeError\u001b[0m: '<=' not supported between instances of 'int' and 'tuple'"
-     ]
-    }
-   ],
-   "source": [
-    "# tf.nn.softmax cannot take softmax over multiple dimensions\n",
-    "# This is why we use Keras's implementation\n",
-    "tf.nn.softmax(tf.random.uniform((15, 50, 50)), axis=(-1, -2))"
    ]
   },
   {
