--- a/jupyter-notebooks/Chapter 09 Group-by, Apply, and Aggregate.ipynb
+++ b/jupyter-notebooks/Chapter 09 Group-by, Apply, and Aggregate.ipynb
@@ -845,12 +845,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "id": "ab2b14c5",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-26T05:40:36.064211Z",
-     "start_time": "2023-11-26T05:40:36.016052Z"
+     "end_time": "2023-12-19T06:44:25.870028Z",
+     "start_time": "2023-12-19T06:44:24.847209Z"
     }
    },
    "outputs": [],
@@ -1002,12 +1002,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "id": "d4e8d824",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-26T05:44:10.702948Z",
-     "start_time": "2023-11-26T05:41:26.454781Z"
+     "end_time": "2023-12-19T06:47:09.848909Z",
+     "start_time": "2023-12-19T06:44:30.156641Z"
     },
     "scrolled": true
    },
@@ -1024,7 +1024,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████| 9912422/9912422 [00:00<00:00, 37933420.11it/s]\n"
+      "100%|███████████████████████████| 9912422/9912422 [00:00<00:00, 49036693.14it/s]\n"
      ]
     },
     {
@@ -1041,7 +1041,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████| 28881/28881 [00:00<00:00, 25928016.66it/s]\n"
+      "100%|███████████████████████████████| 28881/28881 [00:00<00:00, 60537578.12it/s]\n"
      ]
     },
     {
@@ -1058,7 +1058,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████| 1648877/1648877 [00:00<00:00, 24691587.36it/s]\n"
+      "100%|███████████████████████████| 1648877/1648877 [00:00<00:00, 26539562.05it/s]\n"
      ]
     },
     {
@@ -1075,7 +1075,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████| 4542/4542 [00:00<00:00, 3134857.46it/s]\n"
+      "100%|██████████████████████████████████| 4542/4542 [00:00<00:00, 2815626.48it/s]\n"
      ]
     },
     {
@@ -1090,150 +1090,150 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████| 469/469 [00:19<00:00, 24.13it/s]\n",
-      "100%|███████████████████████████████████████████| 79/79 [00:02<00:00, 37.51it/s]\n"
+      "100%|█████████████████████████████████████████| 469/469 [00:18<00:00, 25.20it/s]\n",
+      "100%|███████████████████████████████████████████| 79/79 [00:02<00:00, 37.86it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/10: train_loss - 0.01, eval_loss - 0.95, eval_acc - 0.69\n"
+      "Epoch 1/10: train_loss - 1.54, eval_loss - 1.05, eval_acc - 0.63\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████| 469/469 [00:13<00:00, 35.08it/s]\n",
-      "100%|███████████████████████████████████████████| 79/79 [00:01<00:00, 51.30it/s]\n"
+      "100%|█████████████████████████████████████████| 469/469 [00:13<00:00, 34.59it/s]\n",
+      "100%|███████████████████████████████████████████| 79/79 [00:01<00:00, 51.05it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 2/10: train_loss - 0.01, eval_loss - 0.78, eval_acc - 0.74\n"
+      "Epoch 2/10: train_loss - 0.88, eval_loss - 0.77, eval_acc - 0.75\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████| 469/469 [00:13<00:00, 34.54it/s]\n",
-      "100%|███████████████████████████████████████████| 79/79 [00:01<00:00, 49.07it/s]\n"
+      "100%|█████████████████████████████████████████| 469/469 [00:13<00:00, 34.10it/s]\n",
+      "100%|███████████████████████████████████████████| 79/79 [00:01<00:00, 51.78it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 3/10: train_loss - 0.01, eval_loss - 0.69, eval_acc - 0.78\n"
+      "Epoch 3/10: train_loss - 0.68, eval_loss - 0.62, eval_acc - 0.80\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████| 469/469 [00:14<00:00, 32.36it/s]\n",
-      "100%|███████████████████████████████████████████| 79/79 [00:01<00:00, 47.87it/s]\n"
+      "100%|█████████████████████████████████████████| 469/469 [00:13<00:00, 34.70it/s]\n",
+      "100%|███████████████████████████████████████████| 79/79 [00:01<00:00, 51.54it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 4/10: train_loss - 0.00, eval_loss - 0.56, eval_acc - 0.82\n"
+      "Epoch 4/10: train_loss - 0.59, eval_loss - 0.54, eval_acc - 0.83\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████| 469/469 [00:14<00:00, 32.62it/s]\n",
-      "100%|███████████████████████████████████████████| 79/79 [00:01<00:00, 49.63it/s]\n"
+      "100%|█████████████████████████████████████████| 469/469 [00:13<00:00, 34.69it/s]\n",
+      "100%|███████████████████████████████████████████| 79/79 [00:01<00:00, 50.84it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 5/10: train_loss - 0.00, eval_loss - 0.51, eval_acc - 0.84\n"
+      "Epoch 5/10: train_loss - 0.54, eval_loss - 0.51, eval_acc - 0.84\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████| 469/469 [00:14<00:00, 33.04it/s]\n",
-      "100%|███████████████████████████████████████████| 79/79 [00:01<00:00, 50.59it/s]\n"
+      "100%|█████████████████████████████████████████| 469/469 [00:13<00:00, 34.52it/s]\n",
+      "100%|███████████████████████████████████████████| 79/79 [00:01<00:00, 51.75it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 6/10: train_loss - 0.00, eval_loss - 0.49, eval_acc - 0.85\n"
+      "Epoch 6/10: train_loss - 0.52, eval_loss - 0.51, eval_acc - 0.84\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████| 469/469 [00:14<00:00, 33.47it/s]\n",
-      "100%|███████████████████████████████████████████| 79/79 [00:01<00:00, 51.48it/s]\n"
+      "100%|█████████████████████████████████████████| 469/469 [00:13<00:00, 34.30it/s]\n",
+      "100%|███████████████████████████████████████████| 79/79 [00:01<00:00, 51.49it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 7/10: train_loss - 0.00, eval_loss - 0.47, eval_acc - 0.85\n"
+      "Epoch 7/10: train_loss - 0.50, eval_loss - 0.48, eval_acc - 0.84\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████| 469/469 [00:13<00:00, 33.91it/s]\n",
-      "100%|███████████████████████████████████████████| 79/79 [00:01<00:00, 51.25it/s]\n"
+      "100%|█████████████████████████████████████████| 469/469 [00:13<00:00, 34.44it/s]\n",
+      "100%|███████████████████████████████████████████| 79/79 [00:01<00:00, 51.06it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 8/10: train_loss - 0.00, eval_loss - 0.44, eval_acc - 0.86\n"
+      "Epoch 8/10: train_loss - 0.48, eval_loss - 0.50, eval_acc - 0.84\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████| 469/469 [00:13<00:00, 34.23it/s]\n",
-      "100%|███████████████████████████████████████████| 79/79 [00:01<00:00, 49.41it/s]\n"
+      "100%|█████████████████████████████████████████| 469/469 [00:13<00:00, 34.11it/s]\n",
+      "100%|███████████████████████████████████████████| 79/79 [00:01<00:00, 50.31it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 9/10: train_loss - 0.00, eval_loss - 0.46, eval_acc - 0.86\n"
+      "Epoch 9/10: train_loss - 0.47, eval_loss - 0.43, eval_acc - 0.86\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████| 469/469 [00:14<00:00, 33.29it/s]\n",
-      "100%|███████████████████████████████████████████| 79/79 [00:01<00:00, 50.03it/s]"
+      "100%|█████████████████████████████████████████| 469/469 [00:13<00:00, 33.88it/s]\n",
+      "100%|███████████████████████████████████████████| 79/79 [00:01<00:00, 50.92it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 10/10: train_loss - 0.00, eval_loss - 0.47, eval_acc - 0.85\n"
+      "Epoch 10/10: train_loss - 0.46, eval_loss - 0.43, eval_acc - 0.87\n"
      ]
     },
     {
@@ -1287,9 +1287,9 @@
     "        # Forward pass\n",
     "        optimizer.zero_grad()\n",
     "        y_pred = model(X)\n",
-    "        loss = F.cross_entropy(y_pred, y, reduction=\"mean\")\n",
-    "        loss_train += loss  # accumulating\n",
-    "        loss = loss * len(y)  # taking average\n",
+    "        loss = F.cross_entropy(y_pred, y, reduction=\"sum\")\n",
+    "        loss_train += loss # accumulating\n",
+    "        loss = loss / len(y) # average\n",
     "        loss.backward()\n",
     "        optimizer.step()\n",
     "\n",
