add new chapters

--- a/jupyter-notebooks/Chapter 03 Tensor Indexing.ipynb
+++ b/jupyter-notebooks/Chapter 03 Tensor Indexing.ipynb
@@ -709,7 +709,7 @@
     "    # reshape: the start and end must come in pairs\n",
     "    f = np.reshape(f, (-1, 2))\n",
     "    # filter for at least N consecutive\n",
-    "    interval = int(~interval)  # 0 if True, 1 if False\n",
+    "    interval = 1 - int(interval)  # 0 if True, 1 if False\n",
     "    # Determine which interval has more than desired N consecutive numbers\n",
     "    f = f[(interval + np.diff(f, n=1, axis=1).T[0]) >= N, :]\n",
     "    return f"
