finished revising chapter 2

--- a/jupyter-notebooks/Chapter 02 Basic Tensor Operations.ipynb
+++ b/jupyter-notebooks/Chapter 02 Basic Tensor Operations.ipynb
@@ -165,6 +165,46 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "c15eb7c2",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-26T16:17:09.785113Z",
+     "start_time": "2024-05-26T16:17:09.773081Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "np.eye(2, dtype=int)\n",
+      "[[1 0]\n",
+      " [0 1]]\n",
+      "np.eye(3, k=1, dtype=int)\n",
+      "[[0 1 0]\n",
+      " [0 0 1]\n",
+      " [0 0 0]]\n",
+      "np.identity(3, dtype=int)\n",
+      "[[1 0 0]\n",
+      " [0 1 0]\n",
+      " [0 0 1]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# np.eye vs np.identity\n",
+    "import numpy as np\n",
+    "print(\"np.eye(2, dtype=int)\")\n",
+    "print(np.eye(2, dtype=int))\n",
+    "print(\"np.eye(3, k=1, dtype=int)\")\n",
+    "print(np.eye(3, k=1, dtype=int))\n",
+    "print(\"np.identity(3, dtype=int)\")\n",
+    "print(np.identity(3, dtype=int))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "63e712be",
    "metadata": {},
@@ -1200,13 +1240,18 @@
     "    \"\"\"\n",
     "    Calculate the pair-wise difference between \n",
     "    each element of the two vectors of length N and M, \n",
-    "    respectively, and return a matrix of shape M x N\n",
+    "    respectively, and return a matrix of shape M x N.\n",
+    "    \n",
+    "    Parameters:\n",
     "    * A: vector of length M\n",
     "    * B: vector of length N\n",
+    "\n",
+    "    Returns:\n",
+    "    * A matrix of shape M x N where the element at (i, j) is A[i] - B[j]\n",
     "    \"\"\"\n",
-    "    A = np.asarray(A).flatten()[:, np.newaxis]\n",
-    "    B = np.asarray(B).flatten()[np.newaxis, :]\n",
-    "    return A - B\n",
+    "    A = np.asarray(A).flatten()[:, np.newaxis]  # shape (M, 1)\n",
+    "    B = np.asarray(B).flatten()[np.newaxis, :]  # shape (1, N)\n",
+    "    return A - B  # Resulting shape (M, N)\n",
     "\n",
     "A = np.array([1, 2, 3, 4, 5])\n",
     "B = np.array([-1, -2, -3])\n",
@@ -1439,7 +1484,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.9.10"
   },
   "toc": {
    "base_numbering": 1,
