--- a/jupyter-notebooks/Chapter 01 Introduction to Vectorization.ipynb
+++ b/jupyter-notebooks/Chapter 01 Introduction to Vectorization.ipynb
@@ -309,7 +309,7 @@
     "\n",
     "def sigmoid(x):\n",
     "    \"\"\"Implement sigmoid activation function.\"\"\"\n",
-    "    return 1. / np.exp(-x)\n",
+    "    return 1. / (1 + np.exp(-x))\n",
     "\n",
     "\n",
     "def dense_layer(x, w, b):\n",
@@ -1063,7 +1063,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.9.10"
   },
   "toc": {
    "base_numbering": 1,
