--- a/jupyter-notebooks/Chapter 03 Tensor Indexing.ipynb
+++ b/jupyter-notebooks/Chapter 03 Tensor Indexing.ipynb
@@ -104,24 +104,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "b490d13a",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-26T00:21:16.712682Z",
-     "start_time": "2023-11-26T00:21:16.705990Z"
+     "end_time": "2024-05-26T19:24:39.529036Z",
+     "start_time": "2024-05-26T19:24:39.517382Z"
     }
    },
    "outputs": [],
    "source": [
     "def ind2sub(flat_index, shape, order=\"C\"):\n",
     "    \"\"\"Convert flat index to multi-index.\"\"\"\n",
-    "    if order == \"C\":\n",
+    "    if order == \"C\":  # row-major\n",
     "        eta = np.cumprod(shape[1:][::-1])\n",
     "        eta = np.concatenate([[1], eta])[::-1]\n",
-    "    else: # \"F\"\n",
+    "    elif order == \"F\":  # column-major\n",
     "        eta = np.cumprod(shape)[:-1]\n",
     "        eta = np.concatenate([[1], eta])\n",
+    "    else:\n",
+    "        raise(ValueError(f\"Unrecognized order: {order}\"))\n",
     "\n",
     "    # (num_indices, 1)\n",
     "    flat_index = np.asarray(flat_index)[:, None]\n",
@@ -350,12 +352,14 @@
    "source": [
     "def sub2ind(multi_index, shape, order=\"C\"):\n",
     "    \"\"\"Convert multi-index to flat index.\"\"\"\n",
-    "    if order == \"C\":\n",
+    "    if order == \"C\":  # row-major\n",
     "        eta = np.cumprod(shape[1:][::-1])\n",
     "        eta = np.concatenate([[1], eta])[::-1]\n",
-    "    else: # \"F\"\n",
+    "    elif order == \"F\":  # column-major\n",
     "        eta = np.cumprod(shape)[:-1]\n",
     "        eta = np.concatenate([[1], eta])\n",
+    "    else:\n",
+    "        raise(ValueError(f\"Unrecognized order: {order}\"))\n",
     "\n",
     "    # (num_indices, d)\n",
     "    multi_index = np.asarray(multi_index)\n",
@@ -463,7 +467,7 @@
    "id": "ce7a459a",
    "metadata": {},
    "source": [
-    "`None`"
+    "Using `None`"
    ]
   },
   {
@@ -505,7 +509,7 @@
    "id": "98108f3f",
    "metadata": {},
    "source": [
-    "Ellipsis `...`"
+    "Using ellipsis `...`"
    ]
   },
   {
@@ -807,21 +811,21 @@
    ],
    "source": [
     "import numpy as np\n",
-    "X = np.arange(24).reshape(4, 6)\n",
+    "X = np.arange(1, 7)\n",
+    "X = np.reshape(X, (2, 3), order=\"F\")\n",
     "# Taking elements using flat indices\n",
-    "flat_index = [2, 3, 5, 18, 23]\n",
-    "elements = np.take(X, flat_index)\n",
-    "elements"
+    "flat_index = [1, 3, 4]\n",
+    "elements = np.take(X, flat_index)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "id": "13424f4c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-26T00:37:14.593269Z",
-     "start_time": "2023-11-26T00:37:14.581226Z"
+     "end_time": "2024-05-26T20:11:54.654058Z",
+     "start_time": "2024-05-26T20:11:54.638650Z"
     }
    },
    "outputs": [],
@@ -2002,13 +2006,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "69605c78",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-26T20:31:50.458953Z",
+     "start_time": "2024-05-26T20:31:50.450112Z"
+    }
+   },
+   "source": [
+    "The below code throws an error:\n",
+    "\n",
+    "```\n",
+    "TypeError: Only integers, slices (`:`), ellipsis (`...`), tf.newaxis (`None`) and scalar tf.int32/tf.int64 tensors are valid indices, got <tf.Tensor: shape=(4,), dtype=int32, numpy=array([0, 0, 1, 1], dtype=int32)>\n",
+    "```"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 6,
    "id": "bf08620d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-26T00:47:30.757329Z",
-     "start_time": "2023-11-26T00:47:30.629774Z"
+     "end_time": "2024-05-26T20:32:12.147520Z",
+     "start_time": "2024-05-26T20:32:12.100985Z"
     },
     "scrolled": true
    },
@@ -2020,9 +2041,9 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[70], line 14\u001b[0m\n\u001b[1;32m      7\u001b[0m index \u001b[38;5;241m=\u001b[39m tf\u001b[38;5;241m.\u001b[39mconstant([\n\u001b[1;32m      8\u001b[0m     [\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m1\u001b[39m],\n\u001b[1;32m      9\u001b[0m     [\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m3\u001b[39m],\n\u001b[1;32m     10\u001b[0m     [\u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m0\u001b[39m],\n\u001b[1;32m     11\u001b[0m     [\u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m2\u001b[39m],\n\u001b[1;32m     12\u001b[0m ])\n\u001b[1;32m     13\u001b[0m \u001b[38;5;66;03m# This throws an error\u001b[39;00m\n\u001b[0;32m---> 14\u001b[0m \u001b[43mX\u001b[49m\u001b[43m[\u001b[49m\u001b[43mindex\u001b[49m\u001b[43m[\u001b[49m\u001b[43m:\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mindex\u001b[49m\u001b[43m[\u001b[49m\u001b[43m:\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m]\u001b[49m\n",
-      "File \u001b[0;32m~/opt/miniforge3/envs/lectures/lib/python3.10/site-packages/tensorflow/python/util/traceback_utils.py:153\u001b[0m, in \u001b[0;36mfilter_traceback.<locals>.error_handler\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    151\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[1;32m    152\u001b[0m   filtered_tb \u001b[38;5;241m=\u001b[39m _process_traceback_frames(e\u001b[38;5;241m.\u001b[39m__traceback__)\n\u001b[0;32m--> 153\u001b[0m   \u001b[38;5;28;01mraise\u001b[39;00m e\u001b[38;5;241m.\u001b[39mwith_traceback(filtered_tb) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[1;32m    154\u001b[0m \u001b[38;5;28;01mfinally\u001b[39;00m:\n\u001b[1;32m    155\u001b[0m   \u001b[38;5;28;01mdel\u001b[39;00m filtered_tb\n",
-      "File \u001b[0;32m~/opt/miniforge3/envs/lectures/lib/python3.10/site-packages/tensorflow/python/ops/array_ops.py:926\u001b[0m, in \u001b[0;36m_check_index\u001b[0;34m(idx)\u001b[0m\n\u001b[1;32m    921\u001b[0m dtype \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mgetattr\u001b[39m(idx, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdtype\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;28;01mNone\u001b[39;00m)\n\u001b[1;32m    922\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m (dtype \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mor\u001b[39;00m dtypes\u001b[38;5;241m.\u001b[39mas_dtype(dtype) \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m _SUPPORTED_SLICE_DTYPES \u001b[38;5;129;01mor\u001b[39;00m\n\u001b[1;32m    923\u001b[0m     idx\u001b[38;5;241m.\u001b[39mshape \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(idx\u001b[38;5;241m.\u001b[39mshape) \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m1\u001b[39m):\n\u001b[1;32m    924\u001b[0m   \u001b[38;5;66;03m# TODO(slebedev): IndexError seems more appropriate here, but it\u001b[39;00m\n\u001b[1;32m    925\u001b[0m   \u001b[38;5;66;03m# will break `_slice_helper` contract.\u001b[39;00m\n\u001b[0;32m--> 926\u001b[0m   \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m(_SLICE_TYPE_ERROR \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m, got \u001b[39m\u001b[38;5;132;01m{!r}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mformat(idx))\n",
+      "Cell \u001b[0;32mIn[6], line 14\u001b[0m\n\u001b[1;32m      7\u001b[0m index \u001b[38;5;241m=\u001b[39m tf\u001b[38;5;241m.\u001b[39mconstant([\n\u001b[1;32m      8\u001b[0m     [\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m1\u001b[39m],\n\u001b[1;32m      9\u001b[0m     [\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m3\u001b[39m],\n\u001b[1;32m     10\u001b[0m     [\u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m0\u001b[39m],\n\u001b[1;32m     11\u001b[0m     [\u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m2\u001b[39m],\n\u001b[1;32m     12\u001b[0m ])\n\u001b[1;32m     13\u001b[0m \u001b[38;5;66;03m# This throws an error\u001b[39;00m\n\u001b[0;32m---> 14\u001b[0m \u001b[43mX\u001b[49m\u001b[43m[\u001b[49m\u001b[43mindex\u001b[49m\u001b[43m[\u001b[49m\u001b[43m:\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mindex\u001b[49m\u001b[43m[\u001b[49m\u001b[43m:\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m]\u001b[49m\n",
+      "File \u001b[0;32m~/opt/miniforge3/lib/python3.9/site-packages/tensorflow/python/util/traceback_utils.py:153\u001b[0m, in \u001b[0;36mfilter_traceback.<locals>.error_handler\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    151\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[1;32m    152\u001b[0m   filtered_tb \u001b[38;5;241m=\u001b[39m _process_traceback_frames(e\u001b[38;5;241m.\u001b[39m__traceback__)\n\u001b[0;32m--> 153\u001b[0m   \u001b[38;5;28;01mraise\u001b[39;00m e\u001b[38;5;241m.\u001b[39mwith_traceback(filtered_tb) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;28mNone\u001b[39m\n\u001b[1;32m    154\u001b[0m \u001b[38;5;28;01mfinally\u001b[39;00m:\n\u001b[1;32m    155\u001b[0m   \u001b[38;5;28;01mdel\u001b[39;00m filtered_tb\n",
+      "File \u001b[0;32m~/opt/miniforge3/lib/python3.9/site-packages/tensorflow/python/ops/array_ops.py:926\u001b[0m, in \u001b[0;36m_check_index\u001b[0;34m(idx)\u001b[0m\n\u001b[1;32m    921\u001b[0m dtype \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mgetattr\u001b[39m(idx, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdtype\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;28;01mNone\u001b[39;00m)\n\u001b[1;32m    922\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m (dtype \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mor\u001b[39;00m dtypes\u001b[38;5;241m.\u001b[39mas_dtype(dtype) \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m _SUPPORTED_SLICE_DTYPES \u001b[38;5;129;01mor\u001b[39;00m\n\u001b[1;32m    923\u001b[0m     idx\u001b[38;5;241m.\u001b[39mshape \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(idx\u001b[38;5;241m.\u001b[39mshape) \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m1\u001b[39m):\n\u001b[1;32m    924\u001b[0m   \u001b[38;5;66;03m# TODO(slebedev): IndexError seems more appropriate here, but it\u001b[39;00m\n\u001b[1;32m    925\u001b[0m   \u001b[38;5;66;03m# will break `_slice_helper` contract.\u001b[39;00m\n\u001b[0;32m--> 926\u001b[0m   \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m(_SLICE_TYPE_ERROR \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m, got \u001b[39m\u001b[38;5;132;01m{!r}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mformat(idx))\n",
       "\u001b[0;31mTypeError\u001b[0m: Only integers, slices (`:`), ellipsis (`...`), tf.newaxis (`None`) and scalar tf.int32/tf.int64 tensors are valid indices, got <tf.Tensor: shape=(4,), dtype=int32, numpy=array([0, 0, 1, 1], dtype=int32)>"
      ]
     }
@@ -3733,7 +3754,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.9.10"
   },
   "toc": {
    "base_numbering": 1,
