--- a/jupyter-notebooks/Chapter 04 Linear Algebra.ipynb
+++ b/jupyter-notebooks/Chapter 04 Linear Algebra.ipynb
@@ -1626,7 +1626,7 @@
     "def faster_cross_corr(X, Y):\n",
     "    \"\"\"\n",
     "    faster way to compute Pearson's correlation\n",
-    "    between each combination of paris of two matrices\n",
+    "    between each combination of pairs of two matrices\n",
     "    returns a cross-correlation matrix\n",
     "    [[x1:y1, x1:y2, x1:y3,...., x1:ym],\n",
     "     [x2:y1, x2:y2, x2:y3,...., x1:ym],\n",
@@ -2079,7 +2079,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.9.10"
   },
   "toc": {
    "base_numbering": 1,
