--- a/jupyter-notebooks/Chapter 06 String Processing.ipynb
+++ b/jupyter-notebooks/Chapter 06 String Processing.ipynb
@@ -672,11 +672,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-26T01:28:31.270832Z",
-     "start_time": "2023-11-26T01:28:31.258009Z"
+     "end_time": "2024-05-27T15:49:20.949268Z",
+     "start_time": "2024-05-27T15:49:20.930345Z"
     }
    },
    "outputs": [],
@@ -697,7 +697,7 @@
     "        tf.strings.substr(timestamps_array, 5, 2),\n",
     "        out_type=tf.int64\n",
     "    )\n",
-    "    date = tf.strings.to_number(\n",
+    "    day = tf.strings.to_number(\n",
     "        tf.strings.substr(timestamps_array, 8, 2),\n",
     "        out_type=tf.int64\n",
     "    )\n",
@@ -717,15 +717,15 @@
     "        tf.strings.substr(timestamps_array, 19, 3)\n",
     "    )\n",
     "    zone = tf.cast(zone, tf.int64)\n",
-    "    # retroactively offset year/ month / date based on zone\n",
+    "    # retroactively offset year/ month / day based on zone\n",
     "    if not utc:\n",
-    "        return year, month, date, hour, minute, seconds, zone\n",
+    "        return year, month, day, hour, minute, seconds, zone\n",
     "\n",
     "    # offsets [-1, 0, +1] day\n",
-    "    date += (hour - zone) // 24\n",
+    "    day += (hour - zone) // 24\n",
     "    num_days = tf.constant(\n",
     "        [31, 28, 31, 30, 31, 30, 31, 31, 30, 31, 30, 31],\n",
-    "        dtype=date.dtype\n",
+    "        dtype=day.dtype\n",
     "    )\n",
     "    is_leap_year = tf.math.logical_and(\n",
     "        year % 4 == 0, year % 400 != 0\n",
@@ -737,15 +737,15 @@
     "        month_days + 1,\n",
     "        month_days\n",
     "    )\n",
-    "    month -= (month_days - date) // month_days\n",
+    "    month -= (month_days - day) // month_days\n",
     "    # deals with year offset\n",
     "    year += (month - 1)  // 12\n",
     "\n",
     "    # Go back to correct Month\n",
     "    month = (month - 1) % 12 + 1\n",
-    "    # Correct date: date > max number of days for the month\n",
-    "    date = tf.where(\n",
-    "        date > month_days, date % month_days, date\n",
+    "    # Correct day: day > max number of days for the month\n",
+    "    day = tf.where(\n",
+    "        day > month_days, day % month_days, day\n",
     "    )\n",
     "    # month_days of the correct month\n",
     "    month_days = tf.gather(num_days, month - 1)\n",
@@ -755,9 +755,9 @@
     "        month_days\n",
     "    )\n",
     "\n",
-    "    # Correct date: case when date = 0\n",
-    "    date = tf.where(\n",
-    "        date < 1, month_days, date\n",
+    "    # Correct day: case when day = 0\n",
+    "    day = tf.where(\n",
+    "        day < 1, month_days, day\n",
     "    )\n",
     "\n",
     "    # Correct hour\n",
@@ -766,16 +766,16 @@
     "    # make utc zone, which are 0s\n",
     "    zone = tf.zeros_like(seconds)\n",
     "\n",
-    "    return year, month, date, hour, minute, seconds, zone"
+    "    return year, month, day, hour, minute, seconds, zone"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-26T01:30:21.456316Z",
-     "start_time": "2023-11-26T01:30:21.434436Z"
+     "end_time": "2024-05-27T15:49:23.024974Z",
+     "start_time": "2024-05-27T15:49:22.987628Z"
     }
    },
    "outputs": [
@@ -794,7 +794,7 @@
        "       [2024,    2,   29,   21,   38,   17]])>"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -817,11 +817,11 @@
     "    ]\n",
     ")\n",
     "# parse with our function\n",
-    "year, month, date, hour, minute, seconds, zone = _parse_timestamps(\n",
+    "year, month, day, hour, minute, seconds, zone = _parse_timestamps(\n",
     "    timestamps_array, utc=True\n",
     ")\n",
     "output_tf = tf.stack(\n",
-    "    [year, month, date, hour, minute, seconds], axis=1\n",
+    "    [year, month, day, hour, minute, seconds], axis=1\n",
     ")\n",
     "\n",
     "# parse each with datetime\n",
@@ -1429,7 +1429,7 @@
     }
    ],
    "source": [
-    "import tensorflow\n",
+    "import tensorflow as tf\n",
     "# Create a list to store all the alphabet\n",
     "alphabet_lookup = tf.constant([chr(ii+97) for ii in range(26)])\n",
     "# Last value in the list is oov\n",
