--- a/jupyter-notebooks/Chapter 07 Sparse Matrix.ipynb
+++ b/jupyter-notebooks/Chapter 07 Sparse Matrix.ipynb
@@ -146,10 +146,10 @@
    "outputs": [],
    "source": [
     "def multiply_U_W(U, W, R):\n",
-    "    \"\"\"Compute product of U.T and W, \n",
+    "    \"\"\"Compute product of U and W.T, \n",
     "    but only at the position where R is available\"\"\"\n",
     "    iU, iW = R.tocoo().row, R.tocoo().col # np.nonzero(R)\n",
-    "    #values = np.sum(U[iU, :] * W[iW, :], axis=1)\n",
+    "    # values = np.sum(U[iU, :] * W[iW, :], axis=1)\n",
     "    values = np.einsum('ij,ij->i', U[iU, :], W[iW, :])\n",
     "    # Recreate the coo matrix, making sure its shape\n",
     "    # is the same as R\n",
@@ -676,12 +676,16 @@
     "from tqdm import tqdm\n",
     "\n",
     "def multiply_U_W(U, W, R):\n",
-    "    \"\"\"Compute product of U.T and W, \n",
+    "    \"\"\"Compute product of U and W.T, \n",
     "    but only at the position where R is available\"\"\"\n",
-    "    iU, iW = R.tocoo().row, R.tocoo().col #np.nonzero(R)\n",
-    "    #values = np.sum(U[iU, :] * W[iW, :], axis=1)\n",
+    "    iU, iW = R.tocoo().row, R.tocoo().col # np.nonzero(R)\n",
+    "    # values = np.sum(U[iU, :] * W[iW, :], axis=1)\n",
     "    values = np.einsum('ij,ij->i', U[iU, :], W[iW, :])\n",
-    "    result = coo_matrix((values, (iU, iW)), shape=R.shape).tocsc()\n",
+    "    # Recreate the coo matrix, making sure its shape\n",
+    "    # is the same as R\n",
+    "    result = coo_matrix(\n",
+    "        (values, (iU, iW)), shape=R.shape\n",
+    "    ).tocsc()\n",
     "    return result\n",
     "\n",
     "\n",
@@ -971,7 +975,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.9.10"
   },
   "toc": {
    "base_numbering": 1,
