--- a/jupyter-notebooks/Chapter 08 Jagged Tensors.ipynb
+++ b/jupyter-notebooks/Chapter 08 Jagged Tensors.ipynb
@@ -964,7 +964,7 @@
     "    n_d, m_x = x.shape\n",
     "    n_d, m_y = y.shape\n",
     "\n",
-    "    # Use np.unique to create convert from data -> indices\n",
+    "    # Use np.unique to convert from data -> indices\n",
     "    # This can appropriately handle all data types, including strings\n",
     "    unique, indices = np.unique(np.hstack((x, y)), return_inverse=True)\n",
     "    n_unique = len(unique)\n",
@@ -2800,7 +2800,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.9.10"
   },
   "toc": {
    "base_numbering": 1,
