--- a/jupyter-notebooks/Chapter 09 Group-by, Apply, and Aggregate.ipynb
+++ b/jupyter-notebooks/Chapter 09 Group-by, Apply, and Aggregate.ipynb
@@ -2375,7 +2375,7 @@
     "    # Rounding: will be off by at most 1 frame\n",
     "    dur_adj = tf.cast(tf.round(dur_adj), dur_true.dtype)\n",
     "    \n",
-    "    # Costly! Correct roudning error,\n",
+    "    # Costly! Correct rounding error,\n",
     "    # if 1 frame fewer, add 1 frame to the smallest duration\n",
     "    # if 1 frame more, subtract 1 frame from the largest duration\n",
     "    if rounding == \"strict\":\n",
@@ -2798,7 +2798,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.9.10"
   },
   "toc": {
    "base_numbering": 1,
