--- a/jupyter-notebooks/Chapter 11 Building a Tiny Language Model from Scratch.ipynb
+++ b/jupyter-notebooks/Chapter 11 Building a Tiny Language Model from Scratch.ipynb
@@ -804,12 +804,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "id": "bb9a4f4a",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-12-19T07:40:35.440987Z",
-     "start_time": "2023-12-19T07:40:35.417329Z"
+     "end_time": "2024-05-28T19:45:11.296153Z",
+     "start_time": "2024-05-28T19:45:08.127007Z"
     },
     "code_folding": []
    },
@@ -1038,8 +1038,8 @@
    "id": "ba28e2b7",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-12-19T06:23:04.016699Z",
-     "start_time": "2023-12-19T06:23:03.989883Z"
+     "end_time": "2024-05-28T19:45:13.170292Z",
+     "start_time": "2024-05-28T19:45:13.132458Z"
     }
    },
    "outputs": [
@@ -1506,13 +1506,60 @@
     "    history[\"train_loss\"].append(float(train_loss))\n",
     "    history[\"eval_loss\"].append(float(eval_loss))\n",
     "    history[\"train_acc\"].append(float(train_acc))\n",
-    "    history[\"eval_acc\"].append(float(eval_acc))"
+    "    history[\"eval_acc\"].append(float(eval_acc))\n",
+    "    # saving checkpoint\n",
+    "    if (epoch + 1) % 20 == 0:\n",
+    "        torch.save({\n",
+    "            'epoch': epoch + 1,\n",
+    "            'model_state_dict': model.state_dict(),\n",
+    "            'optimizer_state_dict': optimizer.state_dict(),\n",
+    "            'loss': eval_loss,\n",
+    "            }, f\"./checkpoints/tiny_llm_checkpoint_{epoch+1:03d}.pt\")\n",
+    "\n",
+    "# Saving metrics\n",
+    "with open(\"./training_history.json\", \"w\") as fid:\n",
+    "    json.dump(history, fid)\n",
+    "# Saving the final model\n",
+    "torch.save(model.state_dict(), \"./final_model_weights.pt\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "363b1ec0",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-28T19:46:44.501347Z",
+     "start_time": "2024-05-28T19:46:44.287440Z"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "RuntimeError",
+     "evalue": "Error(s) in loading state_dict for TransformerPlusPlus:\n\tMissing key(s) in state_dict: \"decoder.0.mhattn.rope.phi\", \"decoder.0.mhattn.project_q.weight\", \"decoder.0.mhattn.project_k.weight\", \"decoder.0.mhattn.project_v.weight\", \"decoder.0.mhattn.project_o.weight\", \"decoder.0.ffn.linear_gate.weight\", \"decoder.0.ffn.swi_gate.weight\", \"decoder.0.ffn.output.weight\", \"decoder.0.input_ln.gamma\", \"decoder.0.ffn_ln.gamma\", \"decoder.1.mhattn.rope.phi\", \"decoder.1.mhattn.project_q.weight\", \"decoder.1.mhattn.project_k.weight\", \"decoder.1.mhattn.project_v.weight\", \"decoder.1.mhattn.project_o.weight\", \"decoder.1.ffn.linear_gate.weight\", \"decoder.1.ffn.swi_gate.weight\", \"decoder.1.ffn.output.weight\", \"decoder.1.input_ln.gamma\", \"decoder.1.ffn_ln.gamma\", \"decoder.2.mhattn.rope.phi\", \"decoder.2.mhattn.project_q.weight\", \"decoder.2.mhattn.project_k.weight\", \"decoder.2.mhattn.project_v.weight\", \"decoder.2.mhattn.project_o.weight\", \"decoder.2.ffn.linear_gate.weight\", \"decoder.2.ffn.swi_gate.weight\", \"decoder.2.ffn.output.weight\", \"decoder.2.input_ln.gamma\", \"decoder.2.ffn_ln.gamma\", \"decoder.3.mhattn.rope.phi\", \"decoder.3.mhattn.project_q.weight\", \"decoder.3.mhattn.project_k.weight\", \"decoder.3.mhattn.project_v.weight\", \"decoder.3.mhattn.project_o.weight\", \"decoder.3.ffn.linear_gate.weight\", \"decoder.3.ffn.swi_gate.weight\", \"decoder.3.ffn.output.weight\", \"decoder.3.input_ln.gamma\", \"decoder.3.ffn_ln.gamma\". \n\tUnexpected key(s) in state_dict: \"encoder.0.mhattn.rope.phi\", \"encoder.0.mhattn.project_q.weight\", \"encoder.0.mhattn.project_k.weight\", \"encoder.0.mhattn.project_v.weight\", \"encoder.0.mhattn.project_o.weight\", \"encoder.0.ffn.linear_gate.weight\", \"encoder.0.ffn.swi_gate.weight\", \"encoder.0.ffn.output.weight\", \"encoder.0.input_ln.gamma\", \"encoder.0.ffn_ln.gamma\", \"encoder.1.mhattn.rope.phi\", \"encoder.1.mhattn.project_q.weight\", \"encoder.1.mhattn.project_k.weight\", \"encoder.1.mhattn.project_v.weight\", \"encoder.1.mhattn.project_o.weight\", \"encoder.1.ffn.linear_gate.weight\", \"encoder.1.ffn.swi_gate.weight\", \"encoder.1.ffn.output.weight\", \"encoder.1.input_ln.gamma\", \"encoder.1.ffn_ln.gamma\", \"encoder.2.mhattn.rope.phi\", \"encoder.2.mhattn.project_q.weight\", \"encoder.2.mhattn.project_k.weight\", \"encoder.2.mhattn.project_v.weight\", \"encoder.2.mhattn.project_o.weight\", \"encoder.2.ffn.linear_gate.weight\", \"encoder.2.ffn.swi_gate.weight\", \"encoder.2.ffn.output.weight\", \"encoder.2.input_ln.gamma\", \"encoder.2.ffn_ln.gamma\", \"encoder.3.mhattn.rope.phi\", \"encoder.3.mhattn.project_q.weight\", \"encoder.3.mhattn.project_k.weight\", \"encoder.3.mhattn.project_v.weight\", \"encoder.3.mhattn.project_o.weight\", \"encoder.3.ffn.linear_gate.weight\", \"encoder.3.ffn.swi_gate.weight\", \"encoder.3.ffn.output.weight\", \"encoder.3.input_ln.gamma\", \"encoder.3.ffn_ln.gamma\". ",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[5], line 6\u001b[0m\n\u001b[1;32m      2\u001b[0m checkpoint \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mload(\n\u001b[1;32m      3\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m/Users/edward/Downloads/tiny_llm_checkpoint_040.pt\u001b[39m\u001b[38;5;124m\"\u001b[39m, map_location\u001b[38;5;241m=\u001b[39mtorch\u001b[38;5;241m.\u001b[39mdevice(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcpu\u001b[39m\u001b[38;5;124m'\u001b[39m))\n\u001b[1;32m      4\u001b[0m model \u001b[38;5;241m=\u001b[39m TransformerPlusPlus(n_layers\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m4\u001b[39m, vocab_size\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m30522\u001b[39m, embed_dim\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m256\u001b[39m, ffn_size\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m512\u001b[39m, num_heads\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m4\u001b[39m)\n\u001b[0;32m----> 6\u001b[0m \u001b[43mmodel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mload_state_dict\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcheckpoint\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mmodel_state_dict\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/opt/miniforge3/lib/python3.9/site-packages/torch/nn/modules/module.py:2152\u001b[0m, in \u001b[0;36mModule.load_state_dict\u001b[0;34m(self, state_dict, strict, assign)\u001b[0m\n\u001b[1;32m   2147\u001b[0m         error_msgs\u001b[38;5;241m.\u001b[39minsert(\n\u001b[1;32m   2148\u001b[0m             \u001b[38;5;241m0\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mMissing key(s) in state_dict: \u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m. \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m.\u001b[39mformat(\n\u001b[1;32m   2149\u001b[0m                 \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m, \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m.\u001b[39mjoin(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mk\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m k \u001b[38;5;129;01min\u001b[39;00m missing_keys)))\n\u001b[1;32m   2151\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(error_msgs) \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[0;32m-> 2152\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mRuntimeError\u001b[39;00m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mError(s) in loading state_dict for \u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m:\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;130;01m\\t\u001b[39;00m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m.\u001b[39mformat(\n\u001b[1;32m   2153\u001b[0m                        \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__class__\u001b[39m\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__name__\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;130;01m\\t\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mjoin(error_msgs)))\n\u001b[1;32m   2154\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m _IncompatibleKeys(missing_keys, unexpected_keys)\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: Error(s) in loading state_dict for TransformerPlusPlus:\n\tMissing key(s) in state_dict: \"decoder.0.mhattn.rope.phi\", \"decoder.0.mhattn.project_q.weight\", \"decoder.0.mhattn.project_k.weight\", \"decoder.0.mhattn.project_v.weight\", \"decoder.0.mhattn.project_o.weight\", \"decoder.0.ffn.linear_gate.weight\", \"decoder.0.ffn.swi_gate.weight\", \"decoder.0.ffn.output.weight\", \"decoder.0.input_ln.gamma\", \"decoder.0.ffn_ln.gamma\", \"decoder.1.mhattn.rope.phi\", \"decoder.1.mhattn.project_q.weight\", \"decoder.1.mhattn.project_k.weight\", \"decoder.1.mhattn.project_v.weight\", \"decoder.1.mhattn.project_o.weight\", \"decoder.1.ffn.linear_gate.weight\", \"decoder.1.ffn.swi_gate.weight\", \"decoder.1.ffn.output.weight\", \"decoder.1.input_ln.gamma\", \"decoder.1.ffn_ln.gamma\", \"decoder.2.mhattn.rope.phi\", \"decoder.2.mhattn.project_q.weight\", \"decoder.2.mhattn.project_k.weight\", \"decoder.2.mhattn.project_v.weight\", \"decoder.2.mhattn.project_o.weight\", \"decoder.2.ffn.linear_gate.weight\", \"decoder.2.ffn.swi_gate.weight\", \"decoder.2.ffn.output.weight\", \"decoder.2.input_ln.gamma\", \"decoder.2.ffn_ln.gamma\", \"decoder.3.mhattn.rope.phi\", \"decoder.3.mhattn.project_q.weight\", \"decoder.3.mhattn.project_k.weight\", \"decoder.3.mhattn.project_v.weight\", \"decoder.3.mhattn.project_o.weight\", \"decoder.3.ffn.linear_gate.weight\", \"decoder.3.ffn.swi_gate.weight\", \"decoder.3.ffn.output.weight\", \"decoder.3.input_ln.gamma\", \"decoder.3.ffn_ln.gamma\". \n\tUnexpected key(s) in state_dict: \"encoder.0.mhattn.rope.phi\", \"encoder.0.mhattn.project_q.weight\", \"encoder.0.mhattn.project_k.weight\", \"encoder.0.mhattn.project_v.weight\", \"encoder.0.mhattn.project_o.weight\", \"encoder.0.ffn.linear_gate.weight\", \"encoder.0.ffn.swi_gate.weight\", \"encoder.0.ffn.output.weight\", \"encoder.0.input_ln.gamma\", \"encoder.0.ffn_ln.gamma\", \"encoder.1.mhattn.rope.phi\", \"encoder.1.mhattn.project_q.weight\", \"encoder.1.mhattn.project_k.weight\", \"encoder.1.mhattn.project_v.weight\", \"encoder.1.mhattn.project_o.weight\", \"encoder.1.ffn.linear_gate.weight\", \"encoder.1.ffn.swi_gate.weight\", \"encoder.1.ffn.output.weight\", \"encoder.1.input_ln.gamma\", \"encoder.1.ffn_ln.gamma\", \"encoder.2.mhattn.rope.phi\", \"encoder.2.mhattn.project_q.weight\", \"encoder.2.mhattn.project_k.weight\", \"encoder.2.mhattn.project_v.weight\", \"encoder.2.mhattn.project_o.weight\", \"encoder.2.ffn.linear_gate.weight\", \"encoder.2.ffn.swi_gate.weight\", \"encoder.2.ffn.output.weight\", \"encoder.2.input_ln.gamma\", \"encoder.2.ffn_ln.gamma\", \"encoder.3.mhattn.rope.phi\", \"encoder.3.mhattn.project_q.weight\", \"encoder.3.mhattn.project_k.weight\", \"encoder.3.mhattn.project_v.weight\", \"encoder.3.mhattn.project_o.weight\", \"encoder.3.ffn.linear_gate.weight\", \"encoder.3.ffn.swi_gate.weight\", \"encoder.3.ffn.output.weight\", \"encoder.3.input_ln.gamma\", \"encoder.3.ffn_ln.gamma\". "
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "checkpoint = torch.load(\n",
+    "    \"/Users/edward/Downloads/tiny_llm_checkpoint_040.pt\", map_location=torch.device('cpu'))\n",
+    "model = TransformerPlusPlus(n_layers=4, vocab_size=30522, embed_dim=256, ffn_size=512, num_heads=4)\n",
+    "\n",
+    "model.load_state_dict(checkpoint['model_state_dict'])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "363b1ec0",
+   "id": "80470d0f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1534,7 +1581,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.9.10"
   },
   "toc": {
    "base_numbering": 1,
