--- a/jupyter-notebooks/Chapter 03 Tensor Indexing.ipynb
+++ b/jupyter-notebooks/Chapter 03 Tensor Indexing.ipynb
@@ -1696,7 +1696,7 @@
     "    axis=3\n",
     ")\n",
     "y_tf = tf.gather(\n",
-    "    # taking out the singletone dimension\n",
+    "    # taking out the singleton dimension\n",
     "    X, reorder_index[..., 0, :], axis=3, batch_dims=2\n",
     ")\n",
     "y_np"
